# VicsekModel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: make_gif.gp  plot.gp
src/: CMakeLists.txt  Defs.hpp  NeighborList.cpp  NeighborList.hpp  NeighborListHandler.cpp  NeighborListHandler.hpp  Particle.cpp  Particle.hpp  ParticleManager.cpp  ParticleManager.hpp  ParticleObserver.cpp  ParticleObserver.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  Region.cpp  Region.hpp  System.cpp  System.hpp  TimeStepper.cpp  TimeStepper.hpp  main.cpp
